Test #148 fixed vertical alignment of bottom section on country kitchen page

--- a/htdocs/prod/web/assets/css/mobile.css
+++ b/htdocs/prod/web/assets/css/mobile.css
@@ -11,7 +11,7 @@
   }
   .bottom-box {
     border-radius: 0 10px 10px 0px;
-    margin-left: -10px;
+    margin-left: -14px;
   }
 }
 @media screen and (max-width: 767px) {
